--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -22,6 +22,8 @@ $light-purple-color:  lighten($purple-color, 25%);
 $pink-color:          #f92080 !default;
 $pink-color-light:    #ffdddd !default;
 $yellow-color:        #efcc00 !default;
+$sand-color:          #C48840 !default;
+$dark-blue-color:     #3163A0 !default;
 
 $grey-color:          #828282 !default;
 $grey-color-light:    lighten($grey-color, 40%);
@@ -34,5 +36,5 @@ $black-color: #000000 !default;
 
 // Theme colors
 
-$code-bg-color-light:     rgba($purple-color, 0.05);
+$code-bg-color-light:     rgba($blue-color, 0.05);
 $code-bg-color-dark:      #2c3237 !default;
